Bug #9032
sgs: this statement may fall through
Start date:
2018-02-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue revealed by gcc 7:
../common/unifdef.c: In function 'getlin': ../common/unifdef.c:520:8: error: this statement may fall through [-Werror=implicit-fallthrough=] if (expandtabs) { ^ ../common/unifdef.c:527:4: note: here default: ^~~~~~~ ../common/parser.y:899:7: error: this statement may fall through [-Werror=implicit-fallthrough=] c = usescape(c=gch()); ~~^~~~~~~~~~~~~~~~~~~ ../common/parser.y:900:4: note: here default: ^~~~~~~ cc1: all warnings being treated as errors ../common/y2.c: In function 'gettok': ../common/y2.c:1184:20: error: this statement may fall through [-Werror=implicit-fallthrough=] default: reserve = 1; ~~~~~~~~^~~ ../common/y2.c:1187:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1e8199757379047b30cc13c6aed3a0d25c7a035a
commit 1e8199757379047b30cc13c6aed3a0d25c7a035a Author: Toomas Soome <tsoome@me.com> Date: 2018-02-07T16:41:55.000Z 9032 sgs: this statement may fall through Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>